# CHIP8-Emulator

./: CMakeLists.txt
.cache/clangd/index/: chip8.cpp.01EC9E31BE5F2D92.idx  chip8.h.FF63C8727E30632D.idx  main.cpp.3C6DD66DF815CC14.idx
src/: main.cpp
src/chip8/: chip8.cpp  chip8.h
